src/rules/snapshots/pg_migration_lint__rules__pgm401__tests__drop_index_without_if_exists_fires.snap
---
source: src/rules/pgm401.rs
expression: findings
---
- rule_id: PGM401
  severity: Minor
  message: "DROP INDEX 'idx_orders_status': add IF EXISTS for idempotent migrations."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
